<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdac"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="200dp"
    tools:context="com.example.assggame.MainActivity" >
   
    <Button
        android:id="@+id/avpgame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:onClick="onClick"
        android:text="@string/pvptxt"
        android:textColor="#0D0404" />
    
    <Button
        android:id="@+id/infogame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/avpgame"
        android:layout_below="@+id/avpgame"
        android:layout_marginTop="42dp"
        android:onClick="onClick"
        android:text="@string/aboutmetxt"
        android:textColor="#0D0404" />
   
    <Button
        android:id="@+id/quit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/infogame"
        android:layout_below="@+id/infogame"
        android:layout_marginTop="41dp"
 		android:textColor="#0D0404"
        android:onClick="exit"
        android:text="@string/exittxt" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avpgame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/mainheader"
        android:textColor="#0D0404"
        android:textSize="40sp" />

</RelativeLayout>
