<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdac"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameAbout" >

    <TextView
        android:id="@+id/contactinf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gamehead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/about"
        android:textColor="#090909"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/gamehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/aboutheader"
        android:textColor="#FA0909"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/aboutgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/infos"
        android:textColor="#090909"
        android:textSize="25sp" />
    
    </RelativeLayout>